--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "animate.css-react": "^1.1.0",
+    "gh-pages": "^6.1.1",
     "react": "^18.0.0",
     "react-custom-scroll": "^5.0.0",
     "react-dom": "^18.0.0",
@@ -15,6 +16,7 @@
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.9.0",
     "react-simple-animate": "^3.5.2",
     "web-vitals": "^2.1.4",
     "webpack": "^5.70.0"
